--- a/Toxic-Comment-classification.ipynb
+++ b/Toxic-Comment-classification.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/hp/Desktop/ELECT/Heavy AI Projects/Toxic-Comment/toxic_train.csv\")"
+    "df = pd.read_csv(\"toxic_train.csv\")"
    ]
   },
   {
